...
                        </prototypes>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Ingredients" id="4jp-AV-v7u">
                        <barButtonItem key="backBarButtonItem" title="Back" id="IZR-8P-hAY"/>
                        <barButtonItem key="rightBarButtonItem" title="+" id="6Jz-a5-fOe">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Pbw-Pt-mYf">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Recipes" id="NQe-gb-rXZ"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Ingredients" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CLw-gu-U0s">
                                                <rect key="frame" x="14" y="402" width="386" height="34"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
                                                <state key="normal" title="Add to List">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                <rect key="frame" x="30" y="108" width="315" height="290"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter ingredient name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sAl-gQ-6id">
                                        <rect key="frame" x="10" y="0.0" width="295" height="50"/>
                                        <constraints>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Quantity" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q0R-WW-kHJ">
                                        <rect key="frame" x="10" y="80" width="295" height="50"/>
                                        <constraints>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Units" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xTR-IY-RsF">
                                        <rect key="frame" x="10" y="160" width="295" height="50"/>
                                        <constraints>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
                                        <state key="normal" title="Add">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                    </tableView>
                    <navigationItem key="navigationItem" id="zAh-kB-jU4">
                        <barButtonItem key="rightBarButtonItem" title="Clear" id="0NB-2g-O3W">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
...
                                </constraints>
                                <segments>
                                    <segment title="Food Bank"/>
                                    <segment title="Supermarket"/>
                                </segments>
                                <color key="tintColor" red="0.32549019610000002" green="0.46274509800000002" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                        <viewLayoutGuide key="safeArea" id="vTM-ye-lH5"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Nearby" image="map" id="eip-w0-qAY"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sgD-mZ-ynR" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Shopping" image="shopping_cart_loaded" id="CfF-O7-lAU"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kX7-jg-4YK">
...
