...
         createListsTable()
       
    insertRecipe(name: "Butter Bean & Chorizo Stew", ingredients: "2 Cans of chopped tomatoes\n\n200g Chorizo\n\n2x400g cans of drained butter beans\n\n1 tub Pesto", method: "1. Slice the chorizo and tip into a large saucepan over a medium heat.\n\n2. Fry gently for 5 mins or until starting to turn dark brown.\n\n3. Add the tomatoes and butter beans, bring to the boil, then simmer for 10 mins.\n\n
        
    insertRecipe(name: "Roasted Vegetable & Feta Tostada", ingredients: "325g Frozen grilled vegetables\n\n1 tsp Mexican seasoning\n\n1 Small Avocado\n\n1 Lime\n\n75g Cherry tomatoes\n\n2 Small Flour tortillas\n\n2 Handfuls Rocket\n\n2 tbsp Feta cheese", method: "1. Heat oven to 200C/180C fan/gas mark 6. In a roasting tin, season the frozen vegetables and toss with the Mexican seasoning, then roas
        
    insertRecipe(name: "Vegan Banana Bread", ingredients: "3 Large Bananas\n\n75g Vegetable oil\n\n100g Brown sugar\n\n225g Plain flour\n\n3 tsp Baking powder\n\n3 tsp Cinnamon\n\n50g Dried fruit/nuts", method: "1. Heat oven to 200C/180C fan/gas mark 6. Mash 3 large black peeled bananas with a fork, then mix well with 75g vegetable or sunflower oil and 100g brown sugar.\n\n2. Add 225g plain flour,
        
    insertRecipe(name: "Prawn & Leek Frittata", ingredients: "3 Large Leeks\n\n150g King Prawns\n\n120g Garlic and Herb Cream cheese", method: "1. Heat 2 tbsp olive oil in a medium frying pan. Slice the leeks and add to the pan, cooking for 5 mins.\n\n2. Add the prawns and cook for 1 min more.\n\n3. Beat the eggs and whisk through half the cream cheese. Season to taste.\n\n4. Pour the mixture over
        
    insertRecipe(name: "Vegetable Pasta", ingredients: "2 Medium Red pepper\n\n2 tbsp Olive oil\n\n1 Bowl Fennel\n\n1 Medium Onion\n\n1 Large Carrot\n\n2 Cloves Garlic\n\n1 tsp Chilli flakes\n\n1 tsp Fennel seeds\n\n2 tbsp Tomato purree\n\n400g Can of chopped tomatoes\n\n600ml Vegetable stock\n\n1 tsp Caster sugar\n\n1 Handful Basil leaves\n\n500g Egg pasta", method: "1. Heat the grill and pop the
        
    insertRecipe(name: "Thai Prawn Curry", ingredients: "1 tbsp Vegetable oil\n\n1 Medium Onion\n\n1 tsp Root ginger\n\n400g Can of chopped tomatoes\n\n2 tsp Thai red curry paste\n\n50g Coconut cream\n\n400g Prawns\n\n1 Handful Chopped coriander (optional)", method: "1. Heat the oil in a medium saucepan. Tip in the onion and ginger, then cook for a few mins until softened.\n\n2. Stir in the curry 
...
